Fix spacing so deleted rows don't leave gap.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,7 +138,7 @@ body {
 	}
 }
 
-.form-inline {
+.nested-fields {
 	margin-top: 15px;
 }
 .form-input {
